# cornershop_integration_test

./: .gitignore  README.md  setup.cfg
src/cornershop/: ingestion.py  set_up.py
src/cornershop/utils/: __init__.py  api.py  cli.py  csv_manipulation.py  models.py
tests/: __init__.py  test_api.py  test_csv_manipulation.py  test_set_up.py
