[metadata]
name = cornershop
version = 0.1.0

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    pandas
    requests
    pytest
    pytest-dependecy
    mypy

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    api-credentials = cornershop.utils.cli:oauth_setup
    integration = cornershop.utils.cli:integration_setup
    ingestion = cornershop.utils.cli:ingestion